 * Changed terminology to master/secondary connections in the source.
 * Test against the installed version of the module. This allows test cases
   to work with other versions.

v1.15.11
--------------------------------------------------------------------------------
 * mod_proxy_http2: the "ping" proxy parameter 
   (see <https://httpd.apache.org/docs/2.4/mod/mod_proxy.html>) is now used
   when checking the liveliness of a new or reused h2 connection to the backend.
   With short durations, this makes load-balancing more responsive. The module
   will hold back requests until ping conditions are met, using features of the
   HTTP/2 protocol alone. [Ruediger Pluem, Stefan Eissing]

v1.15.10
--------------------------------------------------------------------------------
 * mod_proxy_http2: respect ProxyTimeout settings on backend connections
   while waiting on incoming data. [Ruediger Pluem, Stefan Eissing]

v1.15.9
--------------------------------------------------------------------------------
 * Since v1.15.4 mod_reqtimeout was enabled for h2 connections. This lead to closing of
   h2 connections when a handshake timeout was configured, irregardless if the handshake
   did happen or not. Added a positive test next to the negative one to ensure that 
   mod_reqtimeout is removed after a successful handshake. Fixes #196 

v1.15.8
--------------------------------------------------------------------------------
 * Fixed an unfortunate regression introduced in v1.15.7 that prevented
   H2_STREAM_ID to be set. Fixes <https://bz.apache.org/bugzilla/show_bug.cgi?id=64330>
   and Windows crashes reported in <https://www.apachelounge.com/viewtopic.php?p=39012#39012>. 
 * Synch with code spell/APLOGNO changes from Apache svn.

v1.15.7
--------------------------------------------------------------------------------
 * Fixes issue #195 regarding h2 slave connection ids that resulted in duplicate
   request ids being generated under loads.

v1.15.6